@@ -1,3 +1,7 @@
+Thu Jun 22 23:32:45 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Same for collage mode :)
+
 Thu Jun 22 23:28:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Woop. Something I should've done a WHILE ago. If progressive
